[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "base64_random"
version = "0.1.0"
authors = [
    { name="Andrew Luchuk", email="andrew.luchuk@outlook.com" },
]
description = "Generates an arbitrary length base 64 random number."
readme = "readme.md"
license = {file = "LICENSE"}
keywords = ["base64", "random", "numbers"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/speratus/base64_random"
Repository = "https://github.com/speratus/base64_random"

[projects.scripts]
b64r = "base64_random:main"
